--- a/src/index.css
+++ b/src/index.css
@@ -55,6 +55,10 @@
   --grey: #707070;
   --green: #00ff5e52;
   --red: #ff000057;
+  --blue: #212369;
+  --offwhite:#FBF2F2;
+  --light_red:#EC1C24;
+  --light_gray:#A397C7;
 }
 
 body {
