a7la sidenav 3ala fe5adko

--- a/src/index.css
+++ b/src/index.css
@@ -55,6 +55,10 @@
   --grey: #707070;
   --green: #00ff5e52;
   --red: #ff000057;
+  --blue: #212369;
+  --offwhite: #fbf2f2;
+  --light_red: #ec1c24;
+  --light_gray: #a397c7;
 }
 
 body {
