--- a/src/components/orders/AddOrderForMontage.css
+++ b/src/components/orders/AddOrderForMontage.css
@@ -49,3 +49,25 @@
     color: var(--black);
     margin-bottom: 5px;
 }
+
+
+.customer-submit {
+    border: 2px solid var(--light-grey);
+    color: 1px solid var(--light-grey);
+    background-color: transparent;
+    border-radius: 25px 25px 25px 25px;
+    width: 200px;
+    padding-top: 17px;
+    padding-bottom: 10px;
+    margin: auto;
+    cursor: pointer;
+    margin-top: 40px;
+    font-family: Tajawal, roboto;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+.customer-submit:hover {
+    background-color: rgb(247, 247, 247);
+    transition: all 0.2s ease-in-out;
+}
