--- a/src/components/customer/MontageCategoriesModal.css
+++ b/src/components/customer/MontageCategoriesModal.css
@@ -6,6 +6,7 @@
 
 .montage-category-loading {
   display: flex;
+  flex-direction: column;
   height: 100%;
 }
 
@@ -44,4 +45,9 @@
   text-align: center;
   font-weight: 500;
   font-size: 20px;
+}
+
+
+.add-montage-category{
+  width: 50%;
 }
