--- a/src/components/montage/editMontage/EditMontage.css
+++ b/src/components/montage/editMontage/EditMontage.css
@@ -81,3 +81,9 @@ input:required {
   direction: rtl;
   padding: 10px 40px 40px 10px;
 }
+
+
+.buttons_container{
+  display: flex;
+  width: 40%;
+  }
