--- a/src/components/sideNav/SideNav.css
+++ b/src/components/sideNav/SideNav.css
@@ -22,19 +22,23 @@
   font-family: Tajawal, roboto;
   cursor: pointer;
   color: var(--white);
-  margin-bottom: 45px;
-  font-size: 20px;
+  margin-bottom: 25px;
+  font-size: 12px;
+  height: 10%;
 }
 
 .sidenav-tab-img {
-  width: 62.6%;
+  width: 50px;
 }
 
 .sidenav-logout-container {
+  /* background-color: red; */
+  /* padding-top:70px; */
+  /* margin-top:70px; */
   width: 100%;
   display: flex;
   position: absolute;
-  bottom: 40px;
+  /* bottom: 40px; */
 }
 
 .sidenav-logout-button {
